[build-system]
requires = [
    "setuptools>=61",        # modern setuptools (PEP 621 metadata)
    "setuptools-scm",        # keep if you still use SCM-based versioning
    "wheel"                  # â† added so a wheel can always be built
]
build-backend = "setuptools.build_meta"

[project]
name = "icad_tone_detection"
version = "2.8.1"
authors = [
    {name = "TheGreatCodeholio", email = "ian@icarey.net"},
]
description = "A Python library for extracting scanner radio tones from scanner audio."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.4",
    "requests>=2.31.0",
    "pydub>=0.25.1",
    "scipy>=1.12.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
icad-tone-detect = "icad_tone_detection.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}          # sources live in src/
packages = ["icad_tone_detection"]  # explicit list is fine
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"icad_tone_detection" = [
    "examples/**/*",
    "bin/**/*",
]

[project.urls]
Homepage = "https://github.com/thegreatcodeholio/icad_tone_detection"
Issues    = "https://github.com/thegreatcodeholio/icad_tone_detection/issues"
